--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
         <wildfly-8.version>8.2.1.Final</wildfly-8.version>
         <wildfly-9.version>9.0.2.Final</wildfly-9.version>
         <wildfly-10.version>10.0.0.Final</wildfly-10.version>
-        <wildfly-camel.version>3.3.0</wildfly-camel.version>
+        <wildfly-camel.version>4.0.0</wildfly-camel.version>
         <arquillian.version>1.1.11.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>1.0.0.CR9</arquillian.weld.version>
@@ -528,7 +528,7 @@
 
             <dependency>
                 <groupId>org.wildfly.camel</groupId>
-                <artifactId>wildfly-camel-subsystem</artifactId>
+                <artifactId>wildfly-camel-subsystem-core</artifactId>
                 <version>${wildfly-camel.version}</version>
                 <scope>test</scope>
                 <exclusions>
