--- a/samples/properties/pom.xml
+++ b/samples/properties/pom.xml
@@ -17,6 +17,7 @@
             !javax.annotation.*,
             *
         </camel.osgi.import.pkg>
+        <deltaspike.version>1.6.1</deltaspike.version>
     </properties>
 
     <dependencies>
@@ -30,6 +31,19 @@
             <groupId>io.astefanutti.camel.cdi</groupId>
             <artifactId>camel-cdi</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-api</artifactId>
+            <version>${deltaspike.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-impl</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
