--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.18.1</camel.version>
-        <cdi.version>2.0-EDR1</cdi.version>
+        <cdi.version>2.0.Alpha4</cdi.version>
         <osgi.version>6.0.0</osgi.version>
         <pax-cdi.version>1.0.0.RC2</pax-cdi.version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>2.7</log4j.version>
-        <weld.version>3.0.0.Alpha15</weld.version>
+        <weld.version>3.0.0.Alpha16</weld.version>
         <owb.version>1.7.0</owb.version>
         <wildfly-8.version>8.2.1.Final</wildfly-8.version>
         <wildfly-9.version>9.0.2.Final</wildfly-9.version>
