--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -13,10 +13,11 @@
     <description>Maven plugin to run Camel standalone</description>
 
     <dependencies>
-        <!-- we extend the exec-maven-plugin for this camel maven plugin -->
+        <!-- We extend the exec-maven-plugin for this Camel Maven plugin -->
         <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
+            <version>1.5.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.maven</groupId>
@@ -24,7 +25,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- As Camel requires Maven 3.x we can depend on an updated version of the plugin API -->
+        <!-- As Camel requires Maven 3.x we can depend on an recent version of the plugin API -->
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
