--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
         <wildfly-camel.version>4.2.0</wildfly-camel.version>
         <arquillian.version>1.1.11.Final</arquillian.version>
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
-        <arquillian.weld.version>1.0.0.CR9</arquillian.weld.version>
+        <arquillian.weld.version>2.0.0.Beta2</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.2.2</shrinkwrap.resolver.version>
         <shrinkwrap.descriptors.version>2.0.0-alpha-10</shrinkwrap.descriptors.version>
         <activemq.version>5.12.1</activemq.version>
@@ -452,14 +452,7 @@
 
             <dependency>
                 <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
-                <version>${arquillian.weld.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jboss.arquillian.container</groupId>
-                <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
+                <artifactId>arquillian-weld-embedded</artifactId>
                 <version>${arquillian.weld.version}</version>
                 <scope>test</scope>
             </dependency>
