--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -134,7 +134,7 @@
 
                 <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
-                    <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+                    <artifactId>arquillian-weld-embedded</artifactId>
                     <optional>true</optional>
                 </dependency>
             </dependencies>
