--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <camel.version>2.18-SNAPSHOT</camel.version>
+        <camel.version>2.18.0</camel.version>
         <cdi.version>1.2</cdi.version>
         <osgi.version>6.0.0</osgi.version>
         <pax-cdi.version>1.0.0-SNAPSHOT</pax-cdi.version>
