--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
         <camel.version>2.18.0</camel.version>
         <cdi.version>1.2</cdi.version>
         <osgi.version>6.0.0</osgi.version>
-        <pax-cdi.version>1.0.0-SNAPSHOT</pax-cdi.version>
+        <pax-cdi.version>1.0.0.RC2</pax-cdi.version>
         <deltaspike.version>1.7.1</deltaspike.version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.21</slf4j.version>
