--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <camel.version>2.18.1</camel.version>
-        <cdi.version>2.0-EDR2</cdi.version>
+        <cdi.version>2.0.Alpha5</cdi.version>
         <osgi.version>6.0.0</osgi.version>
         <pax-cdi.version>1.0.0.RC2</pax-cdi.version>
         <javaee.version>7.0</javaee.version>
