--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>2.7</log4j.version>
-        <weld.version>3.0.0.Beta1</weld.version>
+        <weld.version>3.0.0.Final</weld.version>
         <owb.version>1.7.0</owb.version>
         <wildfly.version>10.1.0.Final</wildfly.version>
         <wildfly-camel.version>4.3.0</wildfly-camel.version>
