--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
         <arquillian-osgi.version>2.1.0.CR18</arquillian-osgi.version>
         <arquillian.weld.version>2.0.0.Beta4</arquillian.weld.version>
         <shrinkwrap.resolver.version>2.2.6</shrinkwrap.resolver.version>
-        <shrinkwrap.descriptors.version>2.0.0-alpha-10</shrinkwrap.descriptors.version>
+        <shrinkwrap.descriptors.version>2.0.0</shrinkwrap.descriptors.version>
         <activemq.version>5.14.2</activemq.version>
     </properties>
 
